examples/errors/params_too_much/main.lc


function funA(name: string) {
    print(name);
}

function main() {
    funA("a", "b");
}
